# automated-security-design-review

./: .dockerignore  .env.sample  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
agents/: __init__.py  graph.py  state.py
agents/critic/: __init__.py  node.py
agents/hunter/: __init__.py  node.py
agents/mediator/: __init__.py  node.py
api/: main.py
api/routers/: kb.py
core/: celery_app.py  config.py  prompts.py
db/: models.py  session.py
ingestion/: ai_extractor.py  dedup_logic.py  tasks.py
ingestion/document_parser/: pdf_parser.py
ingestion/web_scraper/: scraper.py
rag_engine/: __init__.py  pipeline.py  retriever.py  settings.py  utils.py
rag_engine/graphrag/: extractor.py
rag_engine/raptor/: builder.py
rag_engine/vision/: __init__.py  processor.py  schemas.py
tests/: test_ms3_rag.py  test_ms4_vision.py  test_ms5_agents.py
tests/unit/: test_health.py
