[project]
name = "automated-security-design-review"
version = "0.1.0"
description = "Automated Security Design Review (SDR) system"
readme = "PROJECT_FOUNDATION.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic-settings>=2.8.0,<3.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "mypy>=1.15.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "ingestion", "rag_engine", "agents"]

[tool.hatch.build.targets.sdist]
include = [
    "api",
    "core",
    "ingestion",
    "rag_engine",
    "agents",
    "tests",
    "docs",
    "PROJECT_FOUNDATION.md",
    "SYSTEM_ARCHITECTURE.md",
    "TECH_STACK_AND_IMPLEMENTATION.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["api", "agents", "core", "ingestion", "rag_engine"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]
