[project]
name = "automated-security-design-review"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.3",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langfuse>=4.0.6",
    "langgraph>=1.1.6",
    "litellm>=1.83.2",
    "llama-index-core>=0.14.20",
    "llama-index-embeddings-litellm>=0.5.0",
    "llama-index-llms-litellm>=0.7.1",
    "openai>=2.30.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.48",
    "umap-learn>=0.5.11",
    "uvicorn>=0.42.0",
]
